Fixing overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -2038,7 +2038,7 @@ label {
 /* line 8, ../sass/modules/_page.scss */
 .page-wrapper {
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
   height: 100%;
   width: 100%;
 }
