--- a/sass/modules/_page.scss
+++ b/sass/modules/_page.scss
@@ -7,7 +7,7 @@
 
 .page-wrapper {
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
 
   height: 100%;
   width: 100%;
